# jsonpath-rust

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md
jsonpath-ast/: Cargo.toml
jsonpath-ast/src/: ast.rs  lib.rs  syn_parse.rs
jsonpath-rust-impl/: Cargo.toml
jsonpath-rust-impl/src/: lib.rs  parse.rs
jsonpath-rust-impl/tests/: test.rs
jsonpath-rust-impl/tests/rfc9535_compile_tests/: mod.rs
jsonpath-rust-impl/tests/rfc9535_compile_tests/basic/: compile_and_passes.rs  compile_but_expect_err.rs  does_not_compile.rs  does_not_compile.stderr  mod.rs
jsonpath-rust-impl/tests/rfc9535_compile_tests/basic/compiles/: 00_root.rs  01_no_leading_whitespace.rs  02_no_trailing_whitespace.rs  04_name_shorthand_extended_unicode_.rs  05_name_shorthand_underscore.rs  08_name_shorthand_absent_data.rs  09_name_shorthand_array_data.rs  10_name_shorthand_object_data_nested.rs  11_wildcard_shorthand_object_data.rs  12_wildcard_shorthand_array_data.rs  13_wildcard_selector_array_data.rs  14_wildcard_shorthand_then_name_shorthand.rs  15_multiple_selectors.rs  19_multiple_selectors_name_and_index_array_data.rs  20_multiple_selectors_name_and_index_object_data.rs  21_multiple_selectors_index_and_slice.rs  22_multiple_selectors_index_and_slice_overlapping.rs  23_multiple_selectors_duplicate_index.rs  24_multiple_selectors_wildcard_and_index.rs  25_multiple_selectors_wildcard_and_name.rs  26_multiple_selectors_wildcard_and_slice.rs  27_multiple_selectors_multiple_wildcards.rs  29_descendant_segment_index.rs  30_descendant_segment_name_shorthand.rs  31_descendant_segment_wildcard_shorthand_array_data.rs  32_descendant_segment_wildcard_selector_array_data.rs  33_descendant_segment_wildcard_selector_nested_arrays.rs  34_descendant_segment_wildcard_selector_nested_objects.rs  35_descendant_segment_wildcard_shorthand_object_data.rs  36_descendant_segment_wildcard_shorthand_nested_data.rs  37_descendant_segment_multiple_selectors.rs  38_descendant_segment_object_traversal_multiple_selectors.rs
jsonpath-rust-impl/tests/rfc9535_compile_tests/basic/fails/: 06_name_shorthand_symbol.rs  06_name_shorthand_symbol.stderr  07_name_shorthand_number.rs  07_name_shorthand_number.stderr  16_multiple_selectors_space_instead_of_comma.rs  16_multiple_selectors_space_instead_of_comma.stderr  (+11 more)
jsonpath-rust-impl/tests/rfc9535_compile_tests/functions/: mod.rs
rfc9535/: Cargo.toml  README.md
rfc9535/src/: console.rs  main.rs  suite.rs  tests.rs
rfc9535/test_suite/: filtered_cases.json  prepare.sh  results.csv  rfc9535-cts.json
(+57 files in other folders)
