[package]
name = "jsonpath-rust"
description = "The library provides the basic functionality to find the set of the data according to the filtering query."
version = "1.0.0"
authors = ["BorisZhguchev <zhguchev@gmail.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/besok/jsonpath-rust"
repository = "https://github.com/besok/jsonpath-rust"
readme = "README.md"
keywords = ["json", "json-path", "jsonpath", "jsonpath-rust", "xpath"]
categories = ["development-tools", "parsing", "text-processing"]

[dependencies]
serde_json = "1.0"
regex = "1"
pest = "2.0"
pest_derive = "2.0"
thiserror = "2.0.9"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
criterion = "0.5.1"


[[bench]]
name = "regex"
harness = false

[[bench]]
name = "equal"
harness = false
