[package]
name = "jsonpath-ast"
version = "0.1.0"
edition = "2024"

[dependencies]
proc-macro2 = { version = "1.0.95", features = ["span-locations"] }
pest = "2.7.15"
pest_derive = "2.7.15"
syn = { version = "2.0.101", features = ["default", "extra-traits"] }
pest-ast = "0.3.5"
from-pest = "0.3.3"
syn_derive = { version = "0.2.0", optional = true }
quote = "1.0.40"
derive-new = "0.7.0"

[features]
compiled-path = ["dep:syn_derive"]
