[package]
name = "jsonpath-rust-impl"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.95", features = ["span-locations"] }
pest = "2.7.15"
pest_derive = "2.7.15"
syn = { version = "2.0.101", features = ["default"] }
pest-ast = "0.3.5"
from-pest = "0.3.3"
derive-syn-parse = "0.2.0"