[package]
name = "jsonpath-rust-rfc9535"
description = "The tests to check the compliance with RFC 9535"
version = "0.0.1"
edition = "2021"
license = "MIT"
readme = "README.md"


[dependencies]
jsonpath-rust = { path = "../" }
serde_json = "1.0"
serde = { version = "1.0.217", features = ["derive"] }
colored = "2.0"
chrono = "0.4.39"
